<resources>
    <string name="app_name">Lab-7_Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="per">%</string>
    <string name="slesh">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multipliation">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
</resources>